colang-cli/tests/samples/features/new/good/new_struct.co
struct Wrapper {
  x: int
}

fun main() {
  var a = new Wrapper;
  a.x = 5;

  var b = a;
  b.x = 6;

  assert(a.x == 6);
}
