colang-cli/tests/samples/features/new/compile_error/new_as_struct_without_pointer.co
struct Wrapper {
  x: int;
}

fun main() {
  var a: Wrapper = new Wrapper;
}
